preinstall should run prepublish script so built artifacts will actually exist

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "prepublish": ". ./scripts/prepublish.sh",
+    "preinstall": "npm run prepublish",
     "lint": "eslint ./lib",
     "lintfix": "eslint ./lib --fix",
     "testonly": "mocha $npm_package_options_mocha",
