--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
+    "create-react-class": "^15.6.2",
     "hoist-non-react-statics": "1.x.x",
     "prop-types": "^15.6.0"
   }
